--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,23 +1,26 @@
-# Read the Docs configuration file
+# .readthedocs.yaml
+# Read the Docs configuration file for TurboGuard
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Required
 version: 2
 
-# Set the OS, Python version, and other tools you might need
 build:
-  os: ubuntu-24.04
+  os: ubuntu-22.04
   tools:
-    python: "3.13"
+    python: "3.9"
 
-# Build documentation in the "docs/" directory with Sphinx
+python:
+  install:
+    - requirements: docs/requirements.txt
+    - requirements: requirements.txt
+    - method: pip
+      path: .
+
 sphinx:
-   configuration: docs/source/conf.py
+  configuration: docs/source/conf.py
+  builder: html
+  fail_on_warning: false
 
-# Optionally, but recommended,
-# declare the Python requirements required to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
-        
+formats:
+  - pdf
+  - epub
