--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,5 +5,4 @@ sphinxcontrib-mermaid>=0.9.2
 sphinx-copybutton>=0.5.2
 sphinx-tabs>=3.4.1
 nbsphinx>=0.9.3
-ipykernel>=6.0  # Required by nbsphinx
-
+ipykernel>=6.0 
